test/fails/bad_parsing/assign_command.lgl
void main() {
    int x = skip;
}
